# wind-energy-analytics

./: .gitignore  LICENSE  MANIFEST  README.md  requirements.txt  setup.cfg  setup.py  wind_data_exploration_report.html  windenergyforecast-xgb.ipynb
.github/: FUNDING.yml
.github/workflows/: ci_cd-tests.yml  ci_cd_tests.yml
examples/: Untitled.ipynb
examples/datasets/: sample_df.csv  test_df.csv
examples/expected_power_estimation/: binning_method.ipynb  expected_power.ipynb  test_expected_power.ipynb
examples/scada_data_filtering/: scada_data_filtering.ipynb
examples/scada_data_filtering/.ipynb_checkpoints/: scada_data_filtering-checkpoint.ipynb
examples/windenergyforecast/: windenergyforecast-xgb.ipynb
scada_data_analysis.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
scada_data_analysis/modules/: expected_power.py  power_curve_preprocessing.py
scada_data_analysis/modules/.ipynb_checkpoints/: power_curve_preprocessing-checkpoint.py
scada_data_analysis/utils/: binning_function.py
test/: test_expected_power.py  test_power_curve_filtering.py
windenergyforecast/: windenergyforecast-xgb.ipynb
