[metadata]
name = 'scada_data_analysis'
version = 'v1.0.1'
author = 'Abiodun Olaoye'
author_email = 'abiodunolaoye8@gmail.com'
description = 'A scada data processing library'
long_description = file: README.md
long_description_content_type = 'text/markdown'
url = 'https://github.com/abbey2017/wind-energy-analytics'
license = 'BSD 3-Clause License'
keywords = 'power-curve-filtering', 'scada-data-analytics', 'wind-energy'
