[metadata]
name = scada_data_analysis
version = v1.0.1
author = Abiodun Olaoye
author_email = abiodunolaoye8@gmail.com
description = A scada data processing library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/abbey2017/wind-energy-analytics
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD 3-Clause License
    Operating System :: OS Independent
keywords = power-curve-filtering, scada-data-analytics, wind-energy
